Промежуточная
