# api/openapi/post/post.yml
@@ -275,6 +275,80 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorHTTP'
+    
+  /api/cart:
+    get:
+      summary: Вернуть объявления из корзины.
+      operationId: getCart
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Объявления получено.
+          content:
+            application/json:
+              schema:
+                type: array
+                description: все объявления.
+                items:
+                  oneOf:
+                    - required:
+                      - id
+                      properties:
+                        id:
+                          type: string
+                          description: ID пользователя.
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+  
+  /api/cart/{id}:
+    post:
+      summary: Добавить в корзину.
+      operationId: addCart
+      security:
+      - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: Id товара.
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Объявление добавленно.
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+                
+    delete:
+      summary: Удалить из корзины товар.
+      operationId: removeCart
+      security:
+      - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: Id товара.
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Объявление удаленно.
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
 
 
 components:
@@ -377,6 +451,9 @@ components:
               items:
                 type: string
                 description: Изображение.
+              
+              
+            
 
     ErrorHTTP:
       required:
