# internal/post/delivery/http/v2/http.go
@@ -178,7 +178,7 @@ func (a HttpServer) FindOpenPostByUserID(ctx echo.Context, idUser string, page i
 		result = append(result, p)
 	}
 
-	return ctx.JSON(http.StatusCreated, result)
+	return ctx.JSON(http.StatusOK, result)
 }
 
 func (a HttpServer) FindClosePostByUserID(ctx echo.Context, idUser string, page int) error {
@@ -206,7 +206,7 @@ func (a HttpServer) FindClosePostByUserID(ctx echo.Context, idUser string, page 
 		result = append(result, p)
 	}
 
-	return ctx.JSON(http.StatusCreated, result)
+	return ctx.JSON(http.StatusOK, result)
 }
 
 func (a HttpServer) FindPostByTag(ctx echo.Context, tag string, page int) error {
@@ -228,7 +228,7 @@ func (a HttpServer) FindPostByTag(ctx echo.Context, tag string, page int) error 
 		result = append(result, p)
 	}
 
-	return ctx.JSON(http.StatusCreated, result)
+	return ctx.JSON(http.StatusOK, result)
 }
 
 func (a HttpServer) GetAllPost(ctx echo.Context, page int) error {
@@ -250,5 +250,70 @@ func (a HttpServer) GetAllPost(ctx echo.Context, page int) error {
 		result = append(result, p)
 	}
 
-	return ctx.JSON(http.StatusCreated, result)
+	return ctx.JSON(http.StatusOK, result)
+}
+
+// ///////////////////////////////////////////////////////////////////////////////////////////
+// Корзина
+// ///////////////////////////////////////////////////////////////////////////////////////////
+func (a HttpServer) AddCart(ctx echo.Context, id string) error {
+	postId, err := uuid.Parse(id)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	headerAuth := ctx.Request().Header.Get("Authorization")
+	user := jwt.ClaimParse(headerAuth, "id")
+
+	userId, err := uuid.Parse(user)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	err = a.command.AddCart.Handle(context.Background(), userId, postId)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	return ctx.JSON(http.StatusCreated, "Ok")
+}
+
+func (a HttpServer) RemoveCart(ctx echo.Context, id string) error {
+	postId, err := uuid.Parse(id)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	headerAuth := ctx.Request().Header.Get("Authorization")
+	user := jwt.ClaimParse(headerAuth, "id")
+
+	userId, err := uuid.Parse(user)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	err = a.command.RemoveCart.Handle(context.Background(), userId, postId)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	return ctx.JSON(http.StatusCreated, "Ok")
+}
+
+func (a HttpServer) GetCart(ctx echo.Context) error {
+
+	headerAuth := ctx.Request().Header.Get("Authorization")
+	user := jwt.ClaimParse(headerAuth, "id")
+
+	userId, err := uuid.Parse(user)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	resultDTO, err := a.query.GetCart.Handle(context.Background(), userId)
+	if err != nil {
+		return sendPostError(ctx, http.StatusBadRequest, fmt.Sprintf("%v", err))
+	}
+
+	return ctx.JSON(http.StatusOK, resultDTO)
 }
